2007-03-08  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpbucketfilltool.[ch]: request click events, removed
	target_x,y struct members and button_press() implementation and
	use the coords passed in button_release(). Also make sure that
	a click has no effect in areas where we show the bad corsor.

2007-03-08  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpfu.py: support mnemonics in parameter labels.

	* plug-ins/pygimp/plug-ins/foggify.py
	* plug-ins/pygimp/plug-ins/colorxhtml.py
	* plug-ins/pygimp/plug-ins/shadow_bevel.py
	* plug-ins/pygimp/plug-ins/palette-offset.py
	* plug-ins/pygimp/plug-ins/palette-sort.py: added mnemonics.

2007-03-08  Sven Neumann  <sven@gimp.org>

	* app/base/pixel-surround.c: fixed boundary case.

2007-03-08  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppropwidgets.[ch]: gimp_prop_string_combo_box_new()
	takes a GtkTreeModel, not a GtkTreeStore.

2007-03-08  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/winicon/main.c (run): fixed the incorrect declaration
	of the values[] array.  Thanks to Petr Gajdos <pgajdos@suze.cz>
	for reporting this problem and for supplying a patch.

2007-03-08  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpperspectivetool.c
	* app/tools/gimpscaletool.c
	* app/tools/gimprotatetool.c
	* app/tools/gimpfliptool.c
	* app/tools/gimpsheartool.c
	* app/tools/gimptransformtool.[ch]: removed shell_desc member from
	GimpTransformToolClass and just use the tool blurb instead.

2007-03-08  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_key_press):
	added missing call to gimp_rectangle_tool_rectangle_changed().
	Fixes bug #415833.

2007-03-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpvectoroptions.c (gimp_vector_options_gui): describe
	usage of modifiers as suggested in bug #415796.

2007-03-07  Sven Neumann  <sven@gimp.org>

	* app/base/pixel-surround.c (pixel_surround_lock): reduced number
	of calls to tile_manager_get_tile().
